--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body class="color">
     <div class="container">
-        <div class="bg-image"><video autoplay muted loop id="myVideo">
+        <div class="bg-video"><video autoplay muted loop id="myVideo" width="100%">
                 <source src="video/bg-homepage.mp4">
             </video></div>
         <div class="navbar">
